--- a/siuh.html
+++ b/siuh.html
@@ -85,7 +85,7 @@
         <ul>
             <li>Dietetics</li>
             <li>Applied Nutrition</li>
-            <li>Public Health</li>
+            <li>Public-Health</li>
         </ul>
     </section>
 
