--- a/siuh.html
+++ b/siuh.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Safiya's Personal Webpage</h1>
+        <h1>Welcome to Safiya Izharl Ul Haq's Personal Webpage</h1>
     </header>
 
     <section>
