--- a/siuh.html
+++ b/siuh.html
@@ -77,7 +77,7 @@
 
     <section>
         <h2>About Safiya</h2>
-        <p>Hello, I'm Safiya Izhar Ul Haq. I have a deep passion for dietetics, applied nutrition, and public health. I'm excited to share my knowledge and experiences with you through this webpage.</p>
+        <p>Hello, I'm Safiya. I have a deep passion for dietetics, applied nutrition, and public health. I'm excited to share my knowledge and experiences with you through this webpage.</p>
     </section>
 
     <section>
